SERVER-13362 Change BSONElement::chk() to take a BSONType and use uassert